rest: Refactor common controller test code in AbstractControllerTest